force-app/main/default/objects/Labor__c/fields/Estimates__c.field-meta.xml
<CustomField>
    <fullName>Estimates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Labors (Estimate)</relationshipLabel>
    <relationshipName>Labors1</relationshipName>
    <type>Lookup</type>
</CustomField>