force-app/main/default/objects/Labor__c/fields/Invoices__c.field-meta.xml
<CustomField>
    <fullName>Invoices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoices</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Labors</relationshipLabel>
    <relationshipName>Labors</relationshipName>
    <type>Lookup</type>
</CustomField>