force-app/main/default/objects/Labor__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <formula>Quantity__c  *  Technician_Quantity__c  *  Unit_Price__c</formula>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>