force-app/main/default/objects/Labor__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Rate</fullName>
            </value>
            <value>
                <fullName>After Hour Rate</fullName>
            </value>
            <value>
                <fullName>Weekend Rate</fullName>
            </value>
            <value>
                <fullName>Holiday Rate</fullName>
            </value>
            <value>
                <fullName>Emergency Rate</fullName>
            </value>
            <value>
                <fullName>Weekend Emergency rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>