force-app/main/default/objects/Labor__c/fields/Technician_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Technician_Quantity__c</fullName>
    <label>Technician Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>