force-app/main/default/objects/Labor__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incurred for Estimate</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Incurred for Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>