force-app/main/default/objects/Labor__c/recordTypes/Estimate.recordType-meta.xml
<RecordType>
    <fullName>Estimate</fullName>
    <active>true</active>
    <label>Estimate</label>
</RecordType>