force-app/main/default/objects/Labor__c/recordTypes/Incurred_for_estimate.recordType-meta.xml
<RecordType>
    <fullName>Incurred_for_estimate</fullName>
    <active>true</active>
    <label>Incurred For Estimate</label>
</RecordType>