force-app/main/default/objects/Labor__c/recordTypes/Incurred_for_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Incurred_for_Invoice</fullName>
    <active>true</active>
    <label>Incurred for Invoice</label>
</RecordType>